...
    onSaveButtonPositionChanged: (Triple<Int, Int, Int>) -> Unit,
    onExportPositionChange: (Triple<Int, Int, Int>) -> Unit
) {
    BottomAppBar(
        actions = {
            IconButton(
                modifier = Modifier.testTag("scansettings"),
                onClick = {
                    scanningViewModel.setScanSettingsMenuOpen(
                        true
                    )
                }
            ) {
...
                        onClick = {
                            scanningViewModel.scan(
                                scope,
                                snackbarHostState
                            )
                        },
                        modifier = Modifier.testTag("scanbtn"),
                        icon = {
                            Icon(
                                painter = painterResource(R.drawable.outline_scan_24),
                                contentDescription = stringResource(R.string.scan)
                            )
                        },
...
                    } else {
                        SnackbarDefaults.color
                    },
                    action = {
                        IconButton(
                            onClick = { data.dismiss() },
                            modifier = Modifier.testTag("snackbar_dismiss")
                        ) {
                            Icon(Icons.Default.Close, contentDescription = "Dismiss")
                        }
                    }
                ) {
                    Text(data.visuals.message)
...
                ) {
                    val imagePath = currentPages.getOrNull(page)?.filePath
                    AsyncImage(
                        model = imagePath,
                        contentDescription = stringResource(R.string.desc_scanned_page),
                        modifier = Modifier
                            .testTag("scan_page")
                    )
                }
            }
        }
    }

...
