...
    val scrollState = rememberScrollState()

    Column(
        modifier
            .fillMaxWidth()
            .padding(10.dp)
            .testTag("scsetcolumn")
            .verticalScroll(scrollState),
        horizontalAlignment = Alignment.CenterHorizontally
    ) {
        Text(stringResource(R.string.input_source))
        FlowRow(
            Modifier.fillMaxWidth().padding(horizontal = 10.dp),
...
                        )
                    }
                }
            }
        }
        Button(
            modifier = Modifier.padding(horizontal = 15.dp).testTag("copyesclkt"),
            onClick = { scanSettingsStateHolder.copySettingsToClipboard() }
        ) {
            Text(
                stringResource(R.string.copy_current_scanner_options_in_esclkt_format),
                style = MaterialTheme.typography.labelMedium,
                textAlign = TextAlign.Center
...
